--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.9",
+    "emoji-picker-react": "^4.9.2",
     "lucide-react": "^0.373.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.23.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
