--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "drizzle-orm": "^0.30.9",
     "emoji-picker-react": "^4.9.2",
     "lucide-react": "^0.373.0",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "pg": "^8.11.5",
@@ -28,7 +29,8 @@
     "react-router-dom": "^6.23.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "drizzle-kit": "^0.20.17",
